more ids readable fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,7 +27,7 @@ html {
   cursor: pointer;
 }
 
-.form {
+.form-boka, .form-change {
   display: none;
 }
 
